sources/Panel/Panel.out
*** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'Release'
compiling main.cpp...
compiling Console.cpp...
compiling Colors.cpp...
../common/Utils/Value.cpp(26): error: use of undeclared identifier 'itoa'
        itoa(value, pointer, 10);
        ^
../common/Utils/Value.cpp(33): error: use of undeclared identifier 'itoa'
        itoa(int_value, pointer, 10);
        ^
../common/Utils/Value.cpp(39): error: use of undeclared identifier 'itoa'
        itoa(value, string + std::strlen(string), 10);
        ^
3 errors generated.
compiling Value.cpp...
compiling FontMid.cpp...
compiling Menu.cpp...
compiling FontBig.cpp...
compiling Text.cpp...
compiling HAL_FSMC.cpp...
../common/Display/Display_stm.cpp(84): error: out-of-line definition of 'InitHardware' does not match any declaration in namespace 'Display'
void Display::InitHardware()
              ^~~~~~~~~~~~
../common/Display/Display_stm.cpp(157): error: use of undeclared identifier 'drawingScene'
        drawingScene = true;
        ^
../common/Display/Display_stm.cpp(192): error: use of undeclared identifier 'sendToSCPI'; did you mean 'SendToSCPI'?
    if (sendToSCPI)
        ^~~~~~~~~~
        SendToSCPI
../common\Display/Display.h(47): note: 'SendToSCPI' declared here
    void SendToSCPI();
         ^
../common/Display/Display_stm.cpp(192): warning: address of function 'SendToSCPI' will always evaluate to 'true' [-Wpointer-bool-conversion]
    if (sendToSCPI)
    ~~  ^~~~~~~~~~
../common/Display/Display_stm.cpp(192): note: prefix with the address-of operator to silence this warning
    if (sendToSCPI)
        ^
        &
../common/Display/Display_stm.cpp(210): error: use of undeclared identifier 'sendToSCPI'
            sendToSCPI = false;
            ^
../common/Display/Display_stm.cpp(214): error: use of undeclared identifier 'drawingScene'
    drawingScene = false;
    ^
1 warning and 5 errors generated.
compiling Display_stm.cpp...
../common/Menu/MenuItems.cpp(5): warning: In file included from...../common\Display/Primitives.h(4): warning: In file included from...../common\Menu/MenuItems.h(155): warning: private field 'in_correct_mode' is not used [-Wunused-private-field]
    bool in_correct_mode;       // <C5><F1><EB><E8> true, <F2><EE> <ED><E0><F5><EE><E4><E8><EC><F1><FF> <E2> <F0><E5><E6><E8><EC><E5> <EA><EE><F0><F0><E5><EA><F6><E8><E8> <E7><ED><E0><F7><E5><ED><E8><FF>
         ^
1 warning generated.
compiling MenuItems.cpp...
../common/Display/Display.cpp(48): warning: extra qualification on member 'width' [-Wextra-qualification]
    int Display::width = Display::PHYSICAL_WIDTH;
                 ^
../common/Display/Display.cpp(49): warning: extra qualification on member 'height' [-Wextra-qualification]
    int Display::height = Display::PHYSICAL_HEIGHT;
                 ^
../common/Display/Display.cpp(59): warning: function 'Display::DrawSignal' has internal linkage but is not defined [-Wundefined-internal]
    static void DrawSignal();
                ^
../common/Display/Display.cpp(340): note: used here
    DrawSignal();
    ^
../common/Display/Display.cpp(78): warning: unused function 'DrawRectangle1' [-Wunused-function]
void Display::DrawRectangle1(int x, int y)
              ^
4 warnings generated.
compiling Display.cpp...
".\Objects\Panel.axf" - 8 Error(s), 6 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
